[package]
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
name = "pdao-polkadot-colony-chain"
version = "0.0.0"

[dependencies]
anyhow = {version = "1.0"}
async-trait = "0.1.56"
blake3 = "1.3.1"
pdao-colony-common = {version = "0.1.0"}
pdao-colony-contract-common = {version = "0.0.0"}
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
serde = {version = "1.0", features = ["derive"]}
serde-tc = "0.3.3"
serde_json = {version = "1.0"}
tokio = {version = "1.0", features = ["full"]}
