[package]
name = "pdao-beacon-chain-common"
version = "0.0.0"
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.25.0"
serde_json = "1.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", features = ["derive"] }
