[package]
name = "pdao-polkadot-interact"
version = "0.0.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = '2021'
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/postech-dao/polkadot"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7.6"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = "0.11"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
subxt-cli = "0.22.0"
subxt = "0.22.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
sp-keyring = "6.0.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"

[env]
full_node_url = ""
account_public = ""
account_private = ""
wasm_binary_path = ""