[package]
name = "pdao-polkadot-interact"
version = "0.0.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = '2021'
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/postech-dao/polkadot"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
ws = "0.9.2"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
dotenv = "0.15.0"
ink_prelude = "3.3.1"
