[package]
name = "treasury"
version = "0.1.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/postech-dao/polkadot"

[dependencies]
ink_prelude = { version = "3", default-features = false }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
pdao-colony-contract-common = { version = "0.0.0" }
client = {path = "../light_client", default-features = false, features = ["ink-as-dependency"]}
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"

[lib]
name = "treasury"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_prelude/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "client/std",
]
ink-as-dependency = []
